[561118] Dependency version updates
  * Target platform updated to 2019-06
    * Minimum versions were not updated in plugin code, but we will not
test with earlier versions
    * RCPTT was bumped to 2.4.4
  * Xtext minimum version is 2.20
    * Updates pom use exec-maven-plugin for mwe as suggested by Xtext
    * Replaces deprecated Xtext generator support for VQGEN language
    * Removes unnecessary Xpand dependencies
  * Guava requirement is updated to 2.27.1 (in synch with Xtext)
    * Maven dependency override removed as Xtext has fixed its used
Guava version to 27.1.0
  * Eclipse Collections is updated to 10.2.0
  * Regenerated Eclipse project configuration for Maven projects

Change-Id: I17f0e05cb4d6d79c04dd1df52eac44768881aefd
Signed-off-by: Zoltan Ujhelyi <zoltan.ujhelyi@incquerylabs.com>

--- a/documentation/org.eclipse.viatra.documentation.help/src/main/asciidoc/releases/viatra-2.4.adoc
+++ b/documentation/org.eclipse.viatra.documentation.help/src/main/asciidoc/releases/viatra-2.4.adoc
@@ -44,3 +44,10 @@ class PatternParserTest {
 
 
 == Migrating to VIATRA 2.4
+
+VIATRA 2.4 removes support for older versions of its dependencies. When updating to VIATRA 2.4, ensure the required dependencies are updated to at least as follows:
+
+* Eclipse Platform 2019-06 or newer for the query editing support
+* Xtext version 2.20
+  * This resulted in increased Guava minimum version 27.1.0 
+* Eclipse Collections version 10.2
