[564078] Java constants in VQL
Change-Id: I7120d4b16ad42ce3b02bcbd9554ab5da77b258df
Signed-off-by: Dénes Fintha <denes.fintha@gmail.com>
Signed-off-by: Zoltan Ujhelyi <zoltan.ujhelyi@incquerylabs.com>

--- a/documentation/org.eclipse.viatra.documentation.help/src/main/asciidoc/releases/viatra-2.7.adoc
+++ b/documentation/org.eclipse.viatra.documentation.help/src/main/asciidoc/releases/viatra-2.7.adoc
@@ -10,4 +10,13 @@ More information:: https://projects.eclipse.org/projects/modeling.viatra/release
 
 == New and Noteworthy
 
+In addition to bugfixes, VIATRA 2.7 introduces a new language feature: now it is possible to reference Java constants, more precisely, public static final fields of Java classes from pattern specifications.
+
+[source,vql]
+----
+pattern maxInteger(value : java Integer) {
+  value == java Integer::MAX_VALUE;
+}
+----
+
 == Migrating to VIATRA 2.7
